--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -7,3 +7,4 @@ spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASS:petclinic}
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
+server.port=80
