--- a/src/main/resources/application-sqlserver.properties
+++ b/src/main/resources/application-sqlserver.properties
@@ -4,5 +4,5 @@
 database=sqlserver
 spring.datasource.url=${SQLSERVER_URL:'jdbc:sqlserver://localhost;databaseName=petclinic-db;'}
 # SQL is written to be idempotent so this is safe
-spring.datasource.initialization-mode=none
-spring.main.banner-mode="off"
+spring.datasource.initialization-mode=never
+spring.main.banner-mode=off
