--- a/.github/workflows/deploy-container.yml
+++ b/.github/workflows/deploy-container.yml
@@ -53,9 +53,6 @@ jobs:
   deploy-to-ase:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-        name: ase
-        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
         
     steps:
       - name: Login with Azure CLI
@@ -64,8 +61,9 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
     
       - name: Deploy to App Service Environment
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+        uses: azure/CLI@v1
         with:
-          app-name: javademo-aseapp
-          images: javaimageregistry.azurecr.io/petclinic-app:${{ github.sha }}
+          inlineScript: |
+            az webapp config set --resource-group Isolated-Java-app-rg \
+              --name javademo-aseapp \
+              --linux-fx-version 'DOCKER|javaimageregistry.azurecr.io/petclinic-app:${{ github.sha }}'
